# evol

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: gp_node.hpp  gp_tree.hpp  main.cpp  trainer.hpp  uniform.cpp  uniform.hpp
